# chatbotpdf

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pdf_loader.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/application/chat/: ask_question.py
app/application/ingest/: __init__.py  ingest_pdf.py
app/application/ports/: __init__.py  document_source_port.py  embedding_port.py  llm_port.py  vector_store_port.py
app/domain/chat/: entities.py  rules.py
app/domain/document/: __init__.py  entities.py
app/domain/retrieval/: __init__.py
app/infrastructure/llm/: fake_llm.py
app/infrastructure/web/: api.py
application/chat/: __init__.py  ask_question.py
application/ingest/: __init__.py  ingest_pdf.py
application/ports/: document_source_port.py  embedding_port.py  llm_port.py  vector_store_port.py
config/: settings.py
domain/chat/: entities.py  rules.py
domain/document/: __init__.py  entities.py  repository.py
domain/retrieval/: __init__.py  knowledge_retriever.py
infrastructure/embeddings/: __init__.py  openai_embeddings.py
infrastructure/llm/: __init__.py  openai_llm.py
infrastructure/pdf/: __init__.py
infrastructure/vectorstore/: __init__.py  chroma_store.py
infrastructure/web/: __init__.py  api.py
tests/: test_pdf_loader.py
tests/application/: __init__.py
tests/infrastructure/: test_pdf_parser.py
